2015-04-12  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/quantize.c (GrayscalePseudoClassImage): Fix Coverity
	55831 "Resource leak".

	* magick/paint.c (ColorFloodfillImage): Fix Coverity 55886
	"Resource leak".

	* magick/map.c (MagickMapAddEntry): Possibly silence 55844
	"Resource leak".

	* magick/image.c (CloneImage): Fix Coverity 55833 "Resource leak".

	* magick/effect.c (BlurImage): Fix Coverity 55851 "Resource leak".

	* magick/display.c (MagickXAnnotateEditImage): Fix Coverity 55830
	"Resource leak".
	(MagickXVisualDirectoryImage): Fix Coverity 55894 "Resource leak".

	* magick/constitute.c (ReadImages): Fix Coverity 55834 "Resource
	leak".
	(ReadInlineImage): Fix Coverity 55843 "Resource leak".

	* magick/compress.c (HuffmanEncode2Image): Fix Coverity 55839
	"Resource leak".
	(HuffmanDecodeImage): Fix Coverity 55859 "Resource leak".

	* magick/color.c (GetColorHistogram): Fix Coverity 55845 "Resource
	leak".
	(ComputeCubeInfo): Fix Coverity 55857 "Resource leak".

	* coders/yuv.c (ReadYUVImage): Fix Coverity 55890 "Resource leak".

	* coders/wpg.c (UnpackWPG2Raster): Fix Coverity 55832 and 55848
	"Resource leak".

2015-04-11  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/vid.c (ReadVIDImage): Fix Coverity 55868 "Resource leak"
	(ReadVIDImage): Fix Coverity 55874 "Resource leak".

	* coders/txt.c (ReadTXTImage): Fix Coverity 55866 "Resource leak".

	* coders/topol.c (ReadTOPOLImage): Fix Coverity 55865 "Resource
	leak".

	* coders/sgi.c (WriteSGIImage): Fix Coverity 55891 "Resource leak".

	* coders/psd.c (ReadPSDImage): Fix Coverity 55855 "Resource leak".

	* coders/pict.c (WritePICTImage): Fix Coverity 55867, 55875, 55883
	"Resource leak".  Fix Coverity 55892 "Resource leak".

	* coders/pdb.c (ReadPDBImage): Fix Coverity 55840, 55856, and
	55885 "Resource leak".

	* coders/pcx.c (WritePCXImage): Fix Coverity 55877 "Resource
	leak".

	* coders/mvg.c (ReadMVGImage): Fix Coverity 55873 "Resource leak".
