@@ -38,6 +38,11 @@
 <p>2015-04-12  Bob Friesenhahn  &lt;<a class="reference external" href="mailto:bfriesen&#37;&#52;&#48;simple&#46;dallas&#46;tx&#46;us">bfriesen<span>&#64;</span>simple<span>&#46;</span>dallas<span>&#46;</span>tx<span>&#46;</span>us</a>&gt;</p>
 <blockquote>
 <ul class="simple">
+<li>magick/resize.c (ScaleImage): Fix Coverity 55841, 55853, 55858,
+and 55860 &quot;Resource leak&quot;.</li>
+<li>magick/render.c (ConvertPathToPolygon): Fix Coverity 55836
+&quot;Resource leak&quot;.
+(DrawDashPolygon): Fix Coverity 55837 &quot;Resource leak&quot;.</li>
 <li>magick/quantize.c (GrayscalePseudoClassImage): Fix Coverity
 55831 &quot;Resource leak&quot;.</li>
 <li>magick/paint.c (ColorFloodfillImage): Fix Coverity 55886
